package com.communityplatform.auth.data.model;

public enum Role {
    PLATFORM_ADMIN,
    COMMUNITY_ADMIN,
    COMMUNITY_STAFF,
    RESIDENT
}
